--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-textfit": "^1.1.1"
+    "react": "^18.0.0",
+    "react-dom": "^18.2.0"
+    
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
